# rust-axum-template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
.github/workflows/: ci.yaml  publish.yaml
src/: lib.rs  main.rs
src/rest/routes/: common.rs  mod.rs
src/state/: app.rs  config.rs  mod.rs
src/types/: error.rs
