[package]
name = "replace_me_crate_name"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[lints.rust]
unsafe_code = "forbid"
# This is not really a library
async_fn_in_trait = "allow"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
significant_drop_tightening = { level = "allow", priority = 1 }
module_name_repetitions = "allow"
# This is just dumb
must_use_candidate = "allow"
# Sadly sqlx macros do not play nicely with clippy
missing_panics_doc = "allow"
# When impl Trait can be used in type aliases, remove this
future_not_send = "allow"
# Doesn't play nicely with tokio::select!
redundant_pub_crate = "allow"

[dependencies]
tokio = { version = "1", features = ["full", "parking_lot", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.8", features = ["ws", "multipart", "tracing", "http2"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "limit",
    "cors",
    "trace",
    "normalize-path",
] }
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
color-eyre = "0.6"
mimalloc = "0.1"
rustls = "0.23"
